Install fd and rg

--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -6,10 +6,12 @@ tap "homebrew/cask-fonts"
 
 brew "chezmoi"
 brew "ffmpeg"
+brew "fd"
 brew "fzf"
 brew "jq"
 brew "neovim"
 brew "pandoc"
+brew "ripgrep"
 brew "tmux"
 brew "tree"
 brew "yt-dlp"
