Setup fzf to use fd. Add fzf-git.sh

--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -9,11 +9,13 @@ brew "ffmpeg"
 brew "fd"
 brew "fzf"
 brew "jq"
+brew "mas"
 brew "neovim"
 brew "pandoc"
 brew "ripgrep"
 brew "tmux"
 brew "tree"
+brew "yq"
 brew "yt-dlp"
 
 cask "alacritty"
@@ -26,7 +28,6 @@ cask "expressvpn"
 cask "font-meslo-lg-nerd-font"
 cask "google-chrome"
 cask "mediathekview"
-cask "mysides"
 cask "obsidian"
 cask "openaudible"
 cask "rar"
@@ -35,5 +36,7 @@ cask "signal"
 cask "slack"
 cask "spotify"
 cask "wezterm"
+
+# mas "Flow", id: 1423210932
 
 Brewfile
