Adding bat, git-delta, updates to zshrc.

--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -4,10 +4,12 @@ brew bundle --no-lock --file=/dev/stdin <<Brewfile
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 
+brew "bat"
 brew "chezmoi"
 brew "ffmpeg"
 brew "fd"
 brew "fzf"
+brew "git-delta"
 brew "jq"
 brew "mas"
 brew "neovim"
