Color themes, eza aliases, install yabai and skhd.

--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -2,19 +2,23 @@
 
 brew bundle --no-lock --file=/dev/stdin <<Brewfile
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
+tap "koekeishiya/formulae"
 
 brew "bat"
 brew "chezmoi"
+brew "eza"
 brew "ffmpeg"
 brew "fd"
 brew "fzf"
 brew "git-delta"
 brew "jq"
+brew "skhd"
+brew "yabai"
 brew "mas"
 brew "neovim"
 brew "pandoc"
 brew "ripgrep"
+brew "skhd"
 brew "tmux"
 brew "tree"
 brew "yq"
