--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -21,7 +21,9 @@
 
 [delta]
     navigate = true    # use n and N to move between diff sections
-
+    side-by-side = true
+    line-numbers = true
+    syntax-theme = Catppuccin Mocha
     # delta detects terminal colors automatically; set one of these to disable auto-detection
     # dark = true
     # light = true
