Removing yabai, skhd. Adding zellij, Flow, Rectangle. Added nvim kickstart.

--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -12,17 +12,17 @@ brew "fd"
 brew "fzf"
 brew "git-delta"
 brew "jq"
-brew "skhd"
-brew "yabai"
 brew "mas"
 brew "neovim"
 brew "pandoc"
 brew "ripgrep"
-brew "skhd"
+brew "tldr"
 brew "tmux"
 brew "tree"
 brew "yq"
 brew "yt-dlp"
+brew "zellij"
+brew "zoxide"
 
 cask "alacritty"
 cask "anki"
@@ -38,11 +38,12 @@ cask "obsidian"
 cask "openaudible"
 cask "rar"
 cask "raycast"
+cask "rectangle-pro"
 cask "signal"
 cask "slack"
 cask "spotify"
 cask "wezterm"
 
-# mas "Flow", id: 1423210932
+mas "Flow", id: 1423210932
 
 Brewfile
