--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -141,6 +141,13 @@ source ~/.local/share/fzf-git.sh/fzf-git.sh
 eval "$(zoxide init zsh)"
 alias cd='z'
 
+# Vim
+alias vim="nvim"
+alias vi="nvim"
+alias v="nvim"
+alias vimdiff='nvim -d'
+export EDITOR=nvim
+
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
