--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -43,6 +43,7 @@ cask "rectangle-pro"
 cask "signal"
 cask "slack"
 cask "spotify"
+cask "visual-studio-code"
 cask "wezterm"
 
 mas "Flow", id: 1423210932
