--- a/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
+++ b/.chezmoiscripts/darwin/run_onchange_before-install-packages.sh.tmpl
@@ -4,28 +4,85 @@ brew bundle --no-lock --file=/dev/stdin <<Brewfile
 tap "homebrew/bundle"
 tap "koekeishiya/formulae"
 
+# A cat clone with syntax highlighting and Git integration.
+# https://github.com/sharkdp/bat
 brew "bat"
+
+# Manage your dotfiles across multiple diverse machines, securely.
+# https://github.com/twpayne/chezmoi
 brew "chezmoi"
+
+# A modern replacement for ls.
+# https://github.com/eza-community/eza
 brew "eza"
+
+# https://github.com/FFmpeg/FFmpeg
 brew "ffmpeg"
+
+# fd is a program to find entries in your filesystem. 
+# It is a simple, fast and user-friendly alternative to find
+# https://github.com/sharkdp/fd
 brew "fd"
+
+# fzf is a general-purpose command-line fuzzy finder.
+# https://github.com/junegunn/fzf
 brew "fzf"
+
+# git diff syntax highlighting in terminal
+# https://github.com/dandavison/delta
 brew "git-delta"
+
+# jq is a lightweight and flexible command-line 
+# JSON processor akin to sed,awk,grep, and friends for JSON data.
+# https://github.com/jqlang/jq
 brew "jq"
+
+# A command-line interface for the Mac App Store. 
+# Designed for scripting & automation.
+# https://github.com/mas-cli/mas
 brew "mas"
+
+# https://github.com/neovim/neovim
 brew "neovim"
+
+# https://github.com/jgm/pandoc
 brew "pandoc"
+
+# https://github.com/BurntSushi/ripgrep
 brew "ripgrep"
+
+# https://github.com/rust-lang/rustup
 brew "rustup-init"
+
+# The tldr-pages project is a collection of community-maintained 
+# help pages for command-line tools, that aims to be a simpler, 
+# more approachable complement to traditional man pages.
+# https://github.com/tldr-pages/tldr
 brew "tldr"
-brew "tmux"
+
+# list contents of directories in a tree-like format.
 brew "tree"
+
+# a lightweight and portable command-line YAML, 
+# JSON and XML processor.
+# https://github.com/mikefarah/yq
 brew "yq"
+
+# yt-dlp is a feature-rich command-line audio/video 
+# downloader with support for thousands of sites.
+# https://github.com/yt-dlp/yt-dlp
 brew "yt-dlp"
+
+# Zellij is a workspace aimed at developers, ops-oriented 
+# people and anyone who loves the terminal. Similar programs 
+# are sometimes called "Terminal Multiplexers".
+# https://github.com/zellij-org/zellij
 brew "zellij"
+
+# zoxide is a smarter cd command, inspired by z and autojump.
+# https://github.com/ajeetdsouza/zoxide
 brew "zoxide"
 
-cask "alacritty"
 cask "anki"
 cask "calibre"
 cask "discord"
@@ -45,7 +102,5 @@ cask "slack"
 cask "spotify"
 cask "visual-studio-code"
 cask "wezterm"
-
-mas "Flow", id: 1423210932
 
 Brewfile
