--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -151,6 +151,10 @@ export EDITOR=nvim
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
+export NVM_DIR="$HOME/.nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+
 {{- if eq .hosttype "work" }}
 for filename in $(find ~/.shell.d -name '*.sh' | sort); do source $filename; done
 {{- end }}
