--- a/.chezmoiscripts/run_onchange_after_configure-defaults-darwin.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-defaults-darwin.sh.tmpl
@@ -1,3 +1,4 @@
+{{- if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 
 # https://macos-defaults.com/
@@ -14,7 +15,7 @@ defaults write com.apple.dock tilesize -int 40
 defaults write com.apple.dock largesize -int 60
 
 # Auto hide doc
-defaults write com.apple.dock autohide -bool true 
+defaults write com.apple.dock autohide -bool true
 
 # Don't show recent apps in doc.
 defaults write com.apple.dock show-recents -bool false
@@ -42,3 +43,5 @@ defaults write -g InitialKeyRepeat -int 15
 defaults write -g KeyRepeat -int 2
 
 killall Finder
+
+{{ end -}}
