--- a/.chezmoiscripts/run_onchange_before-install-packages-darwin.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before-install-packages-darwin.sh.tmpl
@@ -1,3 +1,4 @@
+{{- if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 
 brew bundle --no-lock --file=/dev/stdin <<Brewfile
@@ -104,3 +105,5 @@ cask "visual-studio-code"
 cask "wezterm"
 
 Brewfile
+
+{{ end -}}
