--- a/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
+++ b/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
@@ -49,6 +49,10 @@ brew "neovim"
 # https://github.com/jgm/pandoc
 brew "pandoc"
 
+# Like a terminal Postman.
+# https://github.com/darrenburns/posting
+brew "posting"
+
 # https://github.com/BurntSushi/ripgrep
 brew "ripgrep"
 
