--- a/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
+++ b/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
@@ -13,6 +13,11 @@ brew "bat"
 # https://github.com/twpayne/chezmoi
 brew "chezmoi"
 
+# If you like the interface of HTTPie but miss the features of curl, curlie is what you are searching for.
+# https://github.com/rs/curlie
+brew "curlie"
+
+
 # A modern replacement for ls.
 # https://github.com/eza-community/eza
 brew "eza"
