--- a/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
+++ b/.chezmoiscripts/run_before_onchange-install-packages-darwin.sh.tmpl
@@ -17,7 +17,6 @@ brew "chezmoi"
 # https://github.com/rs/curlie
 brew "curlie"
 
-
 # A modern replacement for ls.
 # https://github.com/eza-community/eza
 brew "eza"
@@ -42,6 +41,10 @@ brew "git-delta"
 # JSON processor akin to sed,awk,grep, and friends for JSON data.
 # https://github.com/jqlang/jq
 brew "jq"
+
+# ZSA keymapp
+# https://www.zsa.io/flash
+brew "keymapp"
 
 # A command-line interface for the Mac App Store. 
 # Designed for scripting & automation.
